@@ -1,16 +1,14 @@
 package com.gs.api.platform.platUtils;
 
+import cn.hutool.core.codec.Base64;
+
+import javax.crypto.Cipher;
+import javax.crypto.spec.SecretKeySpec;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
-
-import javax.crypto.Cipher;
-import javax.crypto.spec.SecretKeySpec;
-
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 /**
  * 加解密工具
@@ -63,7 +61,7 @@ public class KYUtil {
 		SecretKeySpec skeySpec = new SecretKeySpec(raw, "AES");
 		cipher.init(Cipher.ENCRYPT_MODE, skeySpec);
 		byte[] encrypted = cipher.doFinal(value.getBytes("UTF-8"));
-		String base64 = new BASE64Encoder().encode(encrypted);// 此处使用BASE64做转码
+		String base64 = Base64.encode(encrypted);// 此处使用BASE64做转码
 		return URLEncoder.encode(base64, "UTF-8");//URL加密
 	}
 	
@@ -79,7 +77,7 @@ public class KYUtil {
 		SecretKeySpec skeySpec = new SecretKeySpec(raw, "AES");
 		cipher.init(Cipher.ENCRYPT_MODE, skeySpec);
 		byte[] encrypted = cipher.doFinal(value.getBytes("UTF-8"));
-		return new BASE64Encoder().encode(encrypted);// 此处使用BASE64做转码
+		return Base64.encode(encrypted);// 此处使用BASE64做转码
 	}
 
 	/**
@@ -95,7 +93,7 @@ public class KYUtil {
 			Cipher cipher = Cipher.getInstance("AES/ECB/PKCS5Padding");
 			cipher.init(Cipher.DECRYPT_MODE, skeySpec);
 			if(isDecodeURL)	value = URLDecoder.decode(value, "UTF-8");
-			byte[] encrypted1 = new BASE64Decoder().decodeBuffer(value);// 先用base64解密
+			byte[] encrypted1 = Base64.decode(value);// 先用base64解密
 			byte[] original = cipher.doFinal(encrypted1);
 			String originalString = new String(original, "UTF-8");
 			return originalString;
